--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,72 +1,143 @@
 body {
-    background-image: linear-gradient(109.6deg, rgba(156, 252, 248, 1) 11.2%, rgba(110, 123, 251, 1) 91.1%);
+    background-image: linear-gradient(95.2deg, rgba(173, 252, 234, 1) 26.8%, rgba(192, 229, 246, 1) 64%);
+    font-family: 'Kdam Thmor Pro', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
 }
 
-input {
-    border: 2px solid black;
-    border-radius: 6px;
-    height: 5%;
-    width: 50%;
-    font-family: 'Nova Square', sans-serif;
-    font-size: large;
-    text-align: 20px;
-    position: absolute;
-    top: 50%;
-    left: 37%;
-    transform: translate(-55%, -50%);
-    outline: none;
+.main {
+    height: auto;
 }
 
-.form button {
-    padding: 10px;
-    border-radius: 10px;
-    border: none;
-    outline: none;
-    background-color: #0000ff4a;
-    position: absolute;
-    top: 50%;
-    left: 70%;
-    transform: translate(-20%, -50%);
-    color: white;
-}
-
-.form button:hover {
-    background-color: white;
+.main h2 {
+    margin: 25px auto;
+    width: 250px;
+    text-align: center;
     color: black;
 }
 
-.info p{
-    font-family: 'Nova Square', sans-serif;
+.input input {
+    font-family: 'Kdam Thmor Pro', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
+    border: 1px solid black;
+    outline: none;
+    height: 30px;
     font-size: large;
-    color: red;
+    border-radius: 4px;
+
+}
+
+.input {
     position: absolute;
-    top:55%;
-    left:50%;
-    transform: translate(-50%,-45%);
+    top: 18%;
+    left: 40%;
+    transform: translate(-40%, 0%);
 }
-.download{
-    text-align: center;
-}
-.download p{
-    font-family: 'Nova Square', sans-serif;
+
+.input p {
     font-size: large;
-    position: absolute;
-    top:55%;
-    left:10%;
-    right: 10%;
 }
-.download a{
-    text-decoration: none;
-}
-.download button{
-    padding: 10px;
-    border-radius: 10px;
+
+.input button {
+    padding: 8px;
+    border-radius: 5px;
     border: none;
     outline: none;
-    background-color: #00d922c2;
-    color: white;
+    background-image: linear-gradient(to right, #06aef5, #13e5ea);
+    text-align: center;
+    margin-top: 10px;
     position: absolute;
-    top:78%;
-    left:50%;
-    transform: translate(-50%);
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%, 60%);
+    color: black;
+}
+
+.title h3 {
+    margin: 10px;
+}
+
+.title h4 {
+    margin: 10px;
+}
+
+
+.output {
+    position: absolute;
+    top: 43%;
+    left: 5%;
+    right: 3%;
+}
+
+.head {
+    display: inline;
+    position: absolute;
+    top: 80%;
+    right: 20%;
+    transform: translate(-3%, 50%);
+    color: #066ff5bf;
+}
+
+.options select {
+    outline: none;
+    border: thin solid black;
+    background-color: rgba(255, 255, 255, 0.774);
+    font-family: 'Kdam Thmor Pro', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
+    text-align: center;
+    outline: none;
+    position: absolute;
+    top: 135%;
+    left: 50%;
+    transform: translate(-51%, 20%);
+    height: 30px;
+    width: 250px;
+}
+
+.options select option {
+    font-family: 'Kdam Thmor Pro', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
+
+}
+
+.convert {
+    padding: 8px;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    background-image: linear-gradient(to right, #06aef5, #13e5ea);
+    text-align: center;
+    margin-top: 10px;
+    position: absolute;
+    top: 140%;
+    left: 50%;
+    transform: translate(-50%, 100%);
+    color: black;
+}
+
+.download {
+    padding: 8px;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    background-image: linear-gradient(to right, #06aef5, #13e5ea);
+    text-align: center;
+    margin-top: 10px;
+    position: absolute;
+    top: 185%;
+    left: 50%;
+    transform: translate(-50%, 100%);
+    color: black;
+}
+
+.info {
+    color: rgb(252, 58, 58);
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, 10%);
+    font-size: medium;
 }
