--- a/templates/home.html
+++ b/templates/home.html
@@ -4,40 +4,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Youtube Downloader</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nova+Square&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Roboto:wght@500&family=Ubuntu&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="{{url_for('static',filename='css/styles.css')}}">
-    <title>Youtube Video Download</title>
 </head>
-
+{% if endlink %}
 <script>
-    var link="{{link}}"
-    function download(){
-        window.open(link)
+    function down(){
+        var link='{{endlink}}';
+        window.open(link);
     }
 </script>
-
+{% endif %}
 <body>
     <div class="main">
-        <div class="form">
-            <form action="/download" method="post">
-                <input type="url" placeholder="Paste Youtube Link" name="url" required>
-                <button type="submit">Download</button>
-            </form>
-        </div>
-        <div class="output">
-            <div class="info">
-                <p>{{info}}</p>
+        <h2>Youtube Downloader</h2>
+        <form id="link" action="/result" method="post">
+            <div class="input">
+                <p>Enter Video URL Below</p>
+                <input type="url" name="link" value="{{link}}" id="link" placeholder="Paste Link Here" required>
+                <button type="submit">Search</button>
             </div>
-            {% if title %}
-            <div class="download">
-                <p>{{title}}</p>
-                <button onclick="download()">Download Video</button>
+        </form>
+        {% if info %}
+        <h4 class="info">{{info}}</h4>
+        {% endif %}
+        {% if title %}
+        <div class="output">
+            <div class="title">
+                <h3>Title:</h3>
+                <h4>{{title}}</h4>
+            </div>
+            {% if mp3 %}
+            <div class="options">
+                <h3 class="head">Select Quality And Type</h3>
+                <form action="/download" id="opt" method="post">
+                    <select name="opti"required>
+                        <optgroup label="Audio MP3"></optgroup>
+                        {% for i in mp3 %}
+                        <option value="mp3,{{i.replace('kbps','')}}">{{i}}({{mp3[i]}})</option>
+                        {% endfor %}
+                        <optgroup label="Video MP4"></optgroup>
+                        {% for i in mp4 %}
+                        <option value="mp4,{{i}}">{{i}}({{mp4[i]}})</option>
+                        {% endfor %}
+                    </select>
             </div>
             {% endif %}
+            <div class="opbutton">
+                {% if not endlink %}
+                <button class="convert" type="submit">Convert</button>
+                {% endif %}
+                </form>
+                {% if endlink %}
+                <button onclick="down()" class="download" type="button">Download {{type}} Now</button>
+                {% endif %}
+            </div>
         </div>
+        {% endif %}
     </div>
+
 </body>
 
 </html>
